--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Unified Navigation 
 */
 .navbar {
   padding: 0;
@@ -255,28 +255,18 @@ h6 {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation (Unified with Desktop) 
 */
 .mobile-nav-toggle {
   color: #fff;
   font-size: 28px;
   cursor: pointer;
-  display: none;
+  display: none; /* hide mobile toggle since layout is unified */
   line-height: 0;
   transition: 0.5s;
   position: fixed;
   right: 15px;
   top: 15px;
-}
-
-@media (max-width: 991px) {
-  .mobile-nav-toggle {
-    display: block;
-  }
-
-  .navbar ul {
-    display: none;
-  }
 }
 
 .navbar-mobile {
@@ -290,12 +280,6 @@ h6 {
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
-}
-
-.navbar-mobile .mobile-nav-toggle {
-  position: absolute;
-  top: 15px;
-  right: 15px;
 }
 
 .navbar-mobile ul {
@@ -323,6 +307,16 @@ h6 {
 .navbar-mobile a:focus {
   font-size: 16px;
   position: relative;
+}
+
+/* Remove the media query for mobile styles */
+@media (max-width: 991px) {
+  .navbar ul {
+    display: flex; /* Ensure it's flex on mobile as well */
+  }
+  .mobile-nav-toggle {
+    display: none; /* Hide the mobile toggle */
+  }
 }
 
 /*--------------------------------------------------------------
